--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,4 +25,7 @@
     <string name="welcome">欢迎使用XX</string>
     <string name="takename">取一个昵称</string>
     <string name="button">开始</string>
+    
+     <string name="cancel">取    消</string>
+      <string name="translate">传    输</string>
 </resources>
